fix: deprecate beta channel on npm

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       },
       {
         "name": "develop",
-        "channel": "beta"
+        "channel": "latest"
       }
     ],
     "plugins": [
