--- a/pkg/config/testdata/config.toml
+++ b/pkg/config/testdata/config.toml
@@ -112,7 +112,7 @@ file_size_limit = "50MiB"
 allowed_mime_types = ["image/png", "image/jpeg"]
 objects_path = "./images"
 
-# Uncomment to allow connections via S3 compatible clients
+# Allow connections via S3 compatible clients
 [storage.s3_protocol]
 enabled = true
 
