--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,6 +21,8 @@ updates:
         update-types:
           - minor
           - patch
+        exclude-patterns:
+          - github.com/docker/compose/v2
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
