--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,7 +22,7 @@ updates:
           - minor
           - patch
         exclude-patterns:
-          - github.com/docker/compose/v2
+          - github.com/compose-spec/compose-go/v2
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
