--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
       - uses: golangci/golangci-lint-action@v9
         with:
           args: --timeout 3m --verbose
+          version: latest
 
   start:
     name: Start
